swen430as1/tests/valid/trycatch/TryCatch_Valid_18.while
void f(int x) { throw {h:false}; }

int g(int x) {
     try {
        f(x);
     } catch(int n) {
       throw n;
     } catch(int[] xs) {
       throw xs;
     } catch({int f} r) {
       throw r;
     } catch({bool h} r) {
       
     } catch({int g} r) {
       throw r;
     } catch({int[] f} r) {
       throw r;
     }

     return x;
}

void main() {
     assert g(1) == 1;
}