swen430as1/tests/invalid/trycatch/TryCatch_Invalid_16.while
int f(int x) {
    throw false + 1;
}